# SafeCommit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/safecommit/: __init__.py  cli.py  patterns.py  scanner.py  utils.py
